--- a/src/content/styles.css
+++ b/src/content/styles.css
@@ -1,25 +1,50 @@
 /* fixed bg-slate-700 h-max w-max bottom-4 text-xs right-4 text-white rounded-full shadow-md cursor-pointer z-10 px-3 font-medium border-2 border-white py-1 */
 .create-task-btn {
     position: fixed;
-    background-color: #4a5568;
-    max-height: 100%;
-    max-width: 100%;
-    bottom: 4rem;
-    right: 4rem;
+    z-index: 10;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    user-select: none;
+    /* background-color: #4a5568;
     text-align: center;
     color: #fff;
     border-radius: 9999px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
     cursor: pointer;
     z-index: 10;
-    padding: 0.5rem 1rem;
+    padding: 0.2rem 1rem;
     font-weight: 500;
     border: 2px solid #fff;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-    font-size: 1.1rem;
-    line-height: 1.5rem;
+    font-size: 0.8rem;
+    line-height: 0.5rem;
     transition: all 0.2s ease-in-out;
+user-select: none; */
+
+    min-width: min-content;
+    display: inline-flex;
+    background: #0d3fb4;
+    padding-top: 0rem;
+    padding-bottom: 0rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    color: #ffffff;
+    font-size: 0.875rem;
+    line-height: 0.8rem;
+    font-weight: 500;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    border-radius: 0.375rem;
+    outline: 2px solid rgb(190, 190, 190);
+    outline-offset: 2px;
+}
 
 
+.create-task-btn:hover {
+    /* background-color: #2d3748; */
+    background: #0b3492;
+    outline: 2px solid rgb(255, 255, 255);
+    outline-offset: 2px;
 }
